<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/SettingsContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="upp.scheduleprojApp.SettingsActivity"
             tools:ignore="MergeRootFrame" android:background="@color/BackgroundColor">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center_vertical|top" android:paddingTop="20dp">
        <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/FirstNameLabelValue"
                        android:id="@+id/textView" android:layout_column="0" android:textColor="@color/TextColor"
                        android:textSize="@dimen/BasicTextSize"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/FirstNameET" android:layout_column="1"
                        android:hint="@string/FirstNameLabelValueHint" android:textColor="@color/TextColor"
                        android:textColorHint="@color/TextColor"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SecondNameLabelValue"
                        android:id="@+id/textView2" android:layout_column="0" android:textColor="@color/TextColor"
                        android:textSize="@dimen/BasicTextSize"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/SecondNameET" android:layout_column="1"
                        android:hint="@string/SecondNameLabelValueHint" android:textColor="@color/TextColor"
                        android:textColorHint="@color/TextColor"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/EmailLabelValue"
                        android:id="@+id/textView3" android:layout_column="0" android:textColor="@color/TextColor"
                        android:textSize="@dimen/BasicTextSize"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/EmailET" android:layout_column="1" android:hint="@string/EmailLabelValueHint"
                        android:textColor="@color/TextColor" android:textColorHint="@color/TextColor"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PasswordLabelValue"
                        android:id="@+id/textView4" android:layout_column="0" android:textColor="@color/TextColor"
                        android:textSize="@dimen/BasicTextSize"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/PasswordET" android:layout_column="1"
                        android:hint="@string/PasswordLabelValueHint" android:textColor="@color/TextColor"
                        android:textColorHint="@color/TextColor"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PasswordRepeatLabelValue"
                        android:id="@+id/textView5" android:layout_column="0" android:textColor="@color/TextColor"
                        android:textSize="@dimen/BasicTextSize"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/PasswordRepeatET" android:layout_column="1"
                        android:hint="@string/PasswordLabelValueHint" android:textColor="@color/TextColor"
                        android:textColorHint="@color/TextColor"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/AutoUpdateLabelValue"
                        android:id="@+id/textView6" android:layout_column="0" android:textColor="@color/TextColor"
                        android:textSize="@dimen/BasicTextSize" android:gravity="center_vertical|center_horizontal"/>
                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/AutoUpdateTimeSpinner" android:layout_column="1"
                        android:spinnerMode="dropdown" android:background="@color/BackgroundColor" android:alpha="255"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal|bottom">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/BackButtonValue"
                    android:id="@+id/BackButton" android:layout_weight="1" android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" android:layout_marginBottom="20dp"
                    android:textColor="@color/TextColor" android:background="@color/ButtonColor"
                    android:onClick="BackButtonClick"/>
            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/SaveButtonValue"
                    android:id="@+id/SaveButton" android:layout_weight="1" android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" android:layout_marginBottom="20dp"
                    android:textColor="@color/TextColor" android:background="@color/ButtonColor"
                    android:onClick="SaveButtonClick"/>
        </TableRow>
    </LinearLayout>

</FrameLayout>