<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/activityContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="upp.scheduleprojApp.LoginActivity"
             tools:ignore="MergeRootFrame"
             android:background="@color/BackgroundColor">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/LoginMoto"
            android:id="@+id/loginMoto"
            android:textStyle="bold"
            android:textSize="@dimen/TitleTextSize"
            android:layout_gravity="center_horizontal|top"
            android:inputType="none"
            android:autoText="false"
            android:gravity="center_vertical"
            android:singleLine="false"
            android:textColor="@color/TextColor"
            android:layout_marginTop="20dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_gravity="center_vertical">
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/EmailLabelValue"
                        android:id="@+id/emailLabel"
                        android:layout_column="2"
                        android:textSize="@dimen/BasicTextSize"
                        android:inputType="none"
                        android:layout_marginLeft="@dimen/LoginTextViewMarginLeft"
                        android:textColor="@color/TextColor"
                        />
                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/EmailET"
                        android:layout_column="3"
                        android:layout_weight="1"
                        android:textSize="@dimen/BasicTextSize"
                        android:hint="@string/EmailLabelValueHint"
                        android:layout_marginRight="@dimen/LoginEditTextMarginRight"
                        android:layout_marginLeft="@dimen/LoginEditTextMarginLeft"
                        android:singleLine="false"
                        android:textColor="@color/TextColor"
                        android:textColorHint="@color/TextColor"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PasswordLabelValue"
                        android:id="@+id/passwordLabel"
                        android:layout_column="2"
                        android:textSize="@dimen/BasicTextSize"
                        android:inputType="none"
                        android:layout_marginLeft="@dimen/LoginTextViewMarginLeft"
                        android:textColor="@color/TextColor"
                        />
                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/PasswordET"
                        android:layout_column="3"
                        android:layout_weight="1"
                        android:textSize="@dimen/BasicTextSize"
                        android:hint="@string/PasswordLabelValueHint"
                        android:password="true"
                        android:layout_marginRight="@dimen/LoginEditTextMarginRight"
                        android:layout_marginLeft="@dimen/LoginEditTextMarginLeft"
                        android:textColor="@color/TextColor"
                        android:textColorHint="@color/TextColor"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/RegistrationButtonValue"
                    android:id="@+id/RegistrationButton"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/ButtonLeftMargin"
                    android:layout_marginRight="@dimen/ButtonRightMargin"
                    android:layout_marginBottom="@dimen/ButtonBottomMargin"
                    android:textColor="@color/TextColor"
                    android:background="@color/ButtonColor"
                    android:onClick="RegistrationButtonClick"
                    android:textSize="@dimen/BasicTextSize"/>
            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/LoginButtonValue"
                    android:id="@+id/LoginButton"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/ButtonLeftMargin"
                    android:layout_marginRight="@dimen/ButtonRightMargin"
                    android:layout_marginBottom="@dimen/ButtonBottomMargin"
                    android:textColor="@color/TextColor"
                    android:background="@color/ButtonColor"
                    android:onClick="LoginButtonClick"
                    android:textSize="@dimen/BasicTextSize"/>
        </TableRow>
    </LinearLayout>
</FrameLayout>
